fix(ralph): add starting_event to event_loop for proper workflow trigger

--- a/ralph.yml
+++ b/ralph.yml
@@ -24,6 +24,7 @@
 event_loop:
   prompt_file: "PROMPT.md"
   completion_promise: "WORKFLOW_COMPLETE"
+  starting_event: "workflow.start"
   max_iterations: 100
   max_runtime_seconds: 7200
   idle_timeout_secs: 600
